# model-training

./: .gitignore  CLAUDE.md  README.md  classify.py  pyproject.toml  threshold_tuning.ipynb  train_notebook.ipynb
config/: thresholds.json
notebooks/: threshold_tuning.ipynb
scripts/: create_labelled_dataset.py  train.py
